# gen_traj_lib

./: CMakeLists.txt  LICENSE  README.md  package.xml
doc/: example_codes.txt
include/: trajectory_3dspace.h  trajectory_base.h  trajectory_nd.h
src/: trajectory_3dspace.cpp  trajectory_base.cpp  trajectory_nd.cpp
test/matlab_results/3DspaceEuler/: ddqtraj_spline.txt  dqtraj_spline.txt  qtraj_spline.txt
test/matlab_results/3DspaceQuat/: ddqtraj_poly3.txt  ddqtraj_poly5.txt  ddqtraj_poly7.txt  ddqtraj_spline.txt  dqtraj_poly3.txt  dqtraj_poly5.txt  dqtraj_poly7.txt  dqtraj_spline.txt  qtraj_poly3.txt  qtraj_poly5.txt  qtraj_poly7.txt  qtraj_spline.txt
test/matlab_results/scripts/: ComputeCoeffSpline.m  GenTrajPolynomial.m  GenTrajSpline.m  GenTraj_3DspaceEuler.m  GenTraj_3DspaceQuat.m
test/matlab_results/scripts/toolbox/: skewMatrix.m
test/matlab_results/scripts/toolbox/rotations/: R2e.m  e2q.m  q2R.m  q2e.m  quatMultiplication.m
test/src/: test_trajectory_3d.cpp
test/traj/: test_traj_3deuler.txt  test_traj_3dquat.txt
