<?xml version="1.0"?>
<package format="2">
  <name>gen_traj_lib</name>
  <version>0.0.0</version>
  <description>The trajectory_lib package</description>

  <maintainer email="shiyu.liu27@outlook.com">Shiyu-LIU</maintainer>
  <author email="shiyu.liu27@outlook.com">Shiyu-LIU</author> 
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>eigen</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
